--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -124,7 +124,7 @@
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/bartscher')); ?>"><?php echo $this->__('Bartscher') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/brita-professional')); ?>"><?php echo $this->__('Brita Professional') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/brita-professional')); ?>"><?php echo $this->__('BRITA Professional') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/jura')); ?>"><?php echo $this->__('JURA') ?></a>
