--- a/skin/frontend/foundation/default/src/assets/scss/custom/_owl.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_owl.scss
@@ -1,34 +1,34 @@
+@import '../../../../node_modules/owl.carousel/src/scss/owl.carousel';
+@import '../../../../node_modules/owl.carousel/src/scss/owl.theme.default';
+
 /*
  * 	Default theme - Owl Carousel CSS File
  */
 
-$owl-color-base: #869791 !default;
-$owl-color-white: #FFF !default;
-$owl-color-gray: #D6D6D6 !default;
+$color-base: #869791 !default;
+$color-white: #FFF !default;
+$color-gray: #D6D6D6 !default;
 
 //nav
 
-$owl-nav-color: $white;
-$owl-nav-color-hover: $white;
-$owl-nav-font-size: .9rem;
-$owl-nav-rounded: $global-radius;
-$owl-nav-margin: 0 $global-margin;
-$owl-nav-padding: 0;
-$owl-nav-background: $primary-color;
-$owl-nav-background-hover: scale-color($button-background, $lightness: -15%);
-$owl-nav-disabled-opacity: 0.5 !default;
+$nav-color: $white;
+$nav-color-hover: $white;
+$nav-font-size: .9rem;
+$nav-rounded: $global-radius;
+$nav-margin: 0 $global-margin;
+$nav-padding: 0;
+$nav-background: $primary-color;
+$nav-background-hover: scale-color($button-background, $lightness: -15%);
+$nav-disabled-opacity: 0.5 !default;
 
 //dots
 
-$owl-dot-width: 10px !default;
-$owl-dot-height: 10px !default;
+$dot-width: 10px !default;
+$dot-height: 10px !default;
 $dot-rounded: 30px !default;
-$owl-dot-margin: 5px 7px !default;
-$owl-dot-background: $owl-color-gray !default;
-$owl-dot-background-active: $primary-color !default;
-
-@import '../../../../node_modules/owl.carousel/src/scss/owl.carousel';
-@import '../../../../node_modules/owl.carousel/src/scss/owl.theme.default';
+$dot-margin: 5px 7px !default;
+$dot-background: $owl-color-gray !default;
+$dot-background-active: $primary-color !default;
 
 .owl-theme .owl-nav [class*=owl-] {
   width: 40px;
