--- a/app/design/frontend/foundation/default/template/tm/easytabs/tab/catalog/product/view/upsell.phtml
+++ b/app/design/frontend/foundation/default/template/tm/easytabs/tab/catalog/product/view/upsell.phtml
@@ -31,10 +31,14 @@ $_helper = $this->helper('catalog/output');
             <?php $this->resetItemsIterator() ?>
             <?php foreach ($this->getItems() as $_product): ?>
                 <li class="item">
-                    <div class="content">
-                        <div class="product-name"><a href="<?php echo $_product->getProductUrl() ?>"
-                                                    title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a>
-                        </div>
+                    <?php if (date("Y-m-d") >= substr($_product->getNewsFromDate(), 0, 10) && date("Y-m-d") <= substr($_product->getNewsToDate(), 0, 10)) { ?>
+                        <div class="new-ribbon"><span><?php echo $this->__('Neu') ?></div>
+                    <?php } ?>
+                    <?php if ($_product->getFinalPrice() < $_product->getPrice()) { ?>
+                        <?php $_savingPercent = 100 - round(($_product->getFinalPrice() / $_product->getPrice()) * 100); ?>
+                        <div class="special-ribbon">
+                            <span><?php echo $_savingPercent; ?><?php echo $this->__(' % Rabatt') ?></span></div>
+                    <?php } ?>
                         <div class="products-image float-center">
                             <?php if ($_product->getFinalPrice() < $_product->getPrice()) { ?>
                                 <?php $_savingPercent = 100 - round(($_product->getFinalPrice() / $_product->getPrice()) * 100); ?>
@@ -44,7 +48,7 @@ $_helper = $this->helper('catalog/output');
                             <a href="<?php echo $_product->getProductUrl() ?>"
                                title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>"
                                class="product-image small-centered">
-                                <img
+                                <img class="lazy"
                                         src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(200); ?>"
                                         width="200" height="200"
                                         alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>"/>
@@ -53,7 +57,6 @@ $_helper = $this->helper('catalog/output');
                         <?php if ($_product->getRatingSummary()): ?>
                             <?php echo $this->getReviewsSummaryHtml($_product, 'short') ?>
                         <?php endif; ?>
-                        <div class="extra">
 
                             <?php if ($_product->getAttributeText('manufacturer')): ?>
                                 <?php $brand = $_product->getAttributeText('manufacturer') ?>
@@ -62,7 +65,9 @@ $_helper = $this->helper('catalog/output');
                                          alt="<?php echo $brand ?> Logo">
                                 </div>
                             <?php endif; ?>
-
+                            <div class="product-name"><a href="<?php echo $_product->getProductUrl() ?>"
+                                                         title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a>
+                            </div>
                             <?php echo $this->getLayout()->createBlock('catalog/product_price')
                                 ->setTemplate('catalog/product/price_catalog.phtml')
                                 ->setProduct($_product)
@@ -70,8 +75,6 @@ $_helper = $this->helper('catalog/output');
                                 ->setIdSuffix($idSuffix = 'amit')
                                 ->toHtml(); ?>
                             <?php //echo $this->getPriceHtml($_product, true) ?>
-                        </div>
-                    </div>
                 </li>
             <?php endforeach; ?>
         </ul>
