--- a/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
@@ -284,7 +284,7 @@
     margin: 1em 0 0 0;
   }
 
-  .product-image {
+  .product-img-box .product-image {
     margin-bottom: 0.7rem;
     padding: $global-padding;
     border-radius: $global-radius;
