--- a/skin/frontend/foundation/default/src/assets/scss/custom/_owl.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_owl.scss
@@ -1,13 +1,6 @@
-@import '../../../../node_modules/owl.carousel/src/scss/owl.carousel';
-@import '../../../../node_modules/owl.carousel/src/scss/owl.theme.default';
-
-/*
- * 	Default theme - Owl Carousel CSS File
- */
-
 $color-base: #869791 !default;
 $color-white: #FFF !default;
-$color-gray: #D6D6D6 !default;
+$color-gray: $primary-color !default;
 
 //nav
 
@@ -27,8 +20,11 @@ $dot-width: 10px !default;
 $dot-height: 10px !default;
 $dot-rounded: 30px !default;
 $dot-margin: 5px 7px !default;
-$dot-background: $owl-color-gray !default;
+$dot-background: $color-gray !default;
 $dot-background-active: $primary-color !default;
+
+@import '../../../../node_modules/owl.carousel/src/scss/owl.carousel';
+@import '../../../../node_modules/owl.carousel/src/scss/theme';
 
 .owl-theme .owl-nav [class*=owl-] {
   width: 40px;
