change home cat

--- a/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
@@ -98,6 +98,22 @@ $_categories = $this->getCurrentChildCategories(); ?>
     </li>
     <li class="item" data-equalizer-watch>
         <div class="category-image">
+            <a href="<?php echo Mage::getUrl('') . 'hersteller/frasco'; ?>"
+               title="Frasco Shop">
+                <img class="lazy"
+                     data-src="<?php echo $this->getSkinUrl('dist/assets/img/frasco-shop.jpg'); ?>"
+                     alt="Frasco Shop"
+                     width="200"
+                     height="200" />
+            </a>
+            <h2 class="category-name">
+                <a href="<?php echo Mage::getUrl('') . 'hersteller/frasco'; ?>"
+                   title="Frasco Shop">Frasco Shop</a>
+            </h2>
+        </div>
+    </li>
+    <li class="item" data-equalizer-watch>
+        <div class="category-image">
             <a href="<?php echo Mage::getUrl('') . 'hersteller/hugentobler'; ?>"
                title="Hugentobler Spezial">
                 <img class="lazy"
