--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -133,10 +133,10 @@
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/panasonic')); ?>"><?php echo $this->__('Panasonic') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/rational')); ?>"><?php echo $this->__('Rational') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/rational')); ?>"><?php echo $this->__('RATIONAL') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/winterhalter')); ?>"><?php echo $this->__('Winterhalter') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/winterhalter')); ?>"><?php echo $this->__('WINTERHALTER') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/vaihinger-sanomat')); ?>"><?php echo $this->__('Sanomat') ?></a>
