--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -113,7 +113,7 @@
                     </li>
                     <li>
                         <a href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/fax/faxbestellung.pdf'; ?>"
-                           target="_blank" rel="nofollow noopener noreferrer">Faxbestellung</a></li>
+                           target="_blank">Faxbestellung</a></li>
                     <?php echo $this->getChildHtml('store_switcher', false) ?>
                 </ul>
             </div>
