change store switch

--- a/app/design/frontend/foundation/default/template/page/switch/stores.phtml
+++ b/app/design/frontend/foundation/default/template/page/switch/stores.phtml
@@ -9,7 +9,7 @@
                     $cur_store = '?___from_store=b2c&___store=b2b';
                 }
                 ?>
-                <a href="<?php echo $cur_store; ?>">
+                <a href="<?php echo $cur_store; ?>" rel="nofollow noopener noreferrer">
                     <?php echo $store->getName(); ?>
                 </a>
             </li>
