change footer links

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -142,7 +142,7 @@
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/vaihinger-sanomat')); ?>"><?php echo $this->__('Sanomat') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/seltmann-weiden')); ?>"><?php echo $this->__('Seltmann Weiden') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/mkn')); ?>"><?php echo $this->__('MKN') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/liebherr')); ?>"><?php echo $this->__('Liebherr') ?></a>
@@ -171,7 +171,7 @@
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/bartscher/salamander')); ?>"><?php echo $this->__('Bartscher Salamander') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/piazza-doro')); ?>"><?php echo $this->__('Piazza D\'oro Espresso') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/mkn/kombidaempfer')); ?>"><?php echo $this->__('MKN Kombid&auml;mpfer') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/rational/ivario-pro')); ?>"><?php echo $this->__('Rational iVario Pro') ?></a>
@@ -180,7 +180,7 @@
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/picard-und-wielputz')); ?>"><?php echo $this->__('Picard &amp; Wielp&uuml;tz Besteck') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/nordcap/kuehlschraenke')); ?>"><?php echo $this->__('NordCap K&uuml;hlschr&auml;nke') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/panasonic')); ?>"><?php echo $this->__('Panasonic Mikrowellen') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/aliseo/kosmetikspiegel')); ?>"><?php echo $this->__('Aliseo Kosmetikspiegel') ?></a>
