--- a/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
@@ -82,6 +82,22 @@ $_categories = $this->getCurrentChildCategories(); ?>
     </li>
     <li class="item" data-equalizer-watch>
         <div class="category-image">
+            <a href="<?php echo Mage::getUrl('') . 'hersteller/mkn'; ?>"
+               title="MKN Shop">
+                <img class="lazy"
+                     data-src="<?php echo $this->getSkinUrl('dist/assets/img/mkn-profishop.jpg'); ?>"
+                     alt="MKN Shop"
+                     width="200"
+                     height="200" />
+            </a>
+            <h2 class="category-name">
+                <a href="<?php echo Mage::getUrl('') . 'hersteller/mkn'; ?>"
+                   title="MKN Shop">MKN Profishop</a>
+            </h2>
+        </div>
+    </li>
+    <li class="item" data-equalizer-watch>
+        <div class="category-image">
             <a href="<?php echo Mage::getUrl('') . 'hersteller/aliseo'; ?>"
                title="Aliseo Shop">
                 <img class="lazy"
