--- a/app/design/frontend/foundation/default/template/magesetup/contacts/form.phtml
+++ b/app/design/frontend/foundation/default/template/magesetup/contacts/form.phtml
@@ -36,7 +36,7 @@
         <p>oder per Fax an 038231-3261.</p>
         <p>Sie k&ouml;nnen uns auch eine Nachricht per&nbsp;<strong>E-Mail</strong>&nbsp;zukommen lassen - nutzen Sie
             bitte das <strong>Kontaktformular</strong>&nbsp;oder senden uns eine eMail an&nbsp;<a
-                    href="mailto:shop@gastrodax.de">shop@gastrodax.de</a>.</p>
+                    href="mailto:verkauf@gastrodax.de">verkauf@gastrodax.de</a>.</p>
         <p>Unsere Mitarbeiter sind gern f&uuml;r Sie da.</p>
         <p>Ihr Gastrodax Team</p>
     </div>
