addmanu image size

--- a/app/design/frontend/foundation/default/template/page/html/header.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/header.phtml
@@ -78,7 +78,7 @@
     </div>
     <div class="header-bottom">
         <div class="nav">
-            <button class="hamburger hamburger--arrow-d hamburger--accessible" type="button" data-toggle="offCanvas">
+            <button class="hamburger hamburger--arrow-d hamburger--accessible" type="button" data-toggle="offCanvas" aria-label="Main menu" role="navigation">
               <span class="hamburger-box">
                 <span class="hamburger-inner"></span>
               </span>
