--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -26,6 +26,9 @@
                 <p><?php echo $this->__('Informationen') ?></p>
                 <ul>
                     <li>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'themen')); ?>"><?php echo $this->__('Themen') ?></a>
+                    </li>
+                    <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'lieferung')); ?>"><?php echo $this->__('Versandkosten') ?></a>
                     </li>
                     <li>
