--- a/app/design/frontend/foundation/default/template/catalog/product/price.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/price.phtml
@@ -237,24 +237,27 @@ $_msrpPrice = $this->helper('tax')->getPrice($_product, $_product->getMsrp());
                         <?php if ($_price > 0): ?>
                         <p class="mwst-price">
                             <span class="price-label"></span>
-                            <span class="price_mwst" id="price-including-tax-<?php echo $_id ?><?php echo $this->getIdSuffix() ?>">
+
                             <?php $_store_id = Mage::app()->getStore()->getId(); ?>
                             <?php if ($_store_id == '5'): /* B2C */ ?>
+                            <span class="price_mwst" >
                                 <?php if ($_finalPrice == $_price): ?>
                                     <?php //echo $_coreHelper->formatPrice($_price / ($percent / 100 + 1), true) ?>
                                 <?php else: ?>
                                     <?php //echo $_coreHelper->formatPrice($_finalPrice / ($percent / 100 + 1), true) ?>
                                 <?php endif; ?>
                                 <?php echo 'Inkl. ' . $percent . ' % MwSt.' ?>
+                                </span>
                             <?php elseif ($_store_id == '4'): /* B2B */ ?>
+                                <span class="price_mwst" id="price-including-tax-<?php echo $_id ?><?php echo $this->getIdSuffix() ?>">
                                 <?php if ($_finalPrice == $_price): ?>
                                     <?php echo '(' . $_coreHelper->formatPrice($_price * ($percent / 100 + 1), true) ?>
                                 <?php else: ?>
                                     <?php echo '(' . $_coreHelper->formatPrice($_finalPrice * ($percent / 100 + 1), true) ?>
                                 <?php endif; ?>
                                 <?php echo '<br>Inkl. ' . $percent . ' % MwSt.)' ?>
+                                </span>
                             <?php endif; ?>
-                        </span>
                         </p>
                         <?php endif; ?>
                 <?php endif; ?>
@@ -464,24 +467,26 @@ $_msrpPrice = $this->helper('tax')->getPrice($_product, $_product->getMsrp());
                     ?>
                     <p class="mwst-price">
                         <span class="price-label"></span>
-                        <span class="price_mwst" id="price-including-tax-<?php echo $_id ?><?php echo $this->getIdSuffix() ?>">
                             <?php $_store_id = Mage::app()->getStore()->getId(); ?>
                             <?php if ($_store_id == '5'): /* B2C */ ?>
+                        <span class="price_mwst">
                                 <?php if ($_finalPrice == $_price): ?>
                                     <?php //echo $_coreHelper->formatPrice($_price / ($percent / 100 + 1), true) ?>
                                 <?php else: ?>
                                     <?php //echo $_coreHelper->formatPrice($_finalPrice / ($percent / 100 + 1), true) ?>
                                 <?php endif; ?>
                                 <?php echo 'Inkl. ' . $percent . ' % MwSt.' ?>
+                            </span>
                             <?php elseif ($_store_id == '4'): /* B2B */ ?>
-                                <?php if ($_finalPrice == $_price): ?>
-                                    <?php echo '(' . $_coreHelper->formatPrice($_price * ($percent / 100 + 1), true) ?>
-                                <?php else: ?>
-                                    <?php echo '(' . $_coreHelper->formatPrice($_finalPrice * ($percent / 100 + 1), true) ?>
-                                <?php endif; ?>
-                                <?php echo '<br>Inkl. ' . $percent . ' % MwSt.)' ?>
+                                <span class="price_mwst" id="price-including-tax-<?php echo $_id ?><?php echo $this->getIdSuffix() ?>">
+                                    <?php if ($_finalPrice == $_price): ?>
+                                        <?php echo '(' . $_coreHelper->formatPrice($_price * ($percent / 100 + 1), true) ?>
+                                    <?php else: ?>
+                                        <?php echo '(' . $_coreHelper->formatPrice($_finalPrice * ($percent / 100 + 1), true) ?>
+                                    <?php endif; ?>
+                                    <?php echo '<br>Inkl. ' . $percent . ' % MwSt.)' ?>
+                                </span>
                             <?php endif; ?>
-                        </span>
                     </p>
                 <?php endif; ?>
             <?php endif; ?>
