--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -18,6 +18,8 @@
                 <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/30jahre.png') ?>"
                      alt="30 Jahre New Gastroline GmbH" title="30 Jahre New Gastroline GmbH" width="80" height="34" />
             </a>
+            <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/CoBi_TopShopProfessional2023_Logo_Hor_Gastronomiebedarf.png'); ?>"
+                 alt="ComputerBild TopShop 2023 Gastronomiebedarf" title="ComputerBild TopShop 2023 Gastronomiebedarf" width="200"/>
         </div>
     </div>
     <div class="footer-info">
