--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -9,18 +9,38 @@
     <div class="footer-extras">
         <div class="content">
             <a href="<?php echo Mage::getUrl('', array('_direct' => 'lieferung')); ?>">
-                <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/versandkostenfrei.png') ?>"
-                     alt="kostenfreie Lieferung ab 99 EUR" title="kostenfreie Lieferung ab 99 EUR" width="174" height="50" />
+                <img class="lazy"
+                     src="<?php echo $this->getSkinUrl('dist/assets/img/versandkostenfrei.png') ?>"
+                     alt="kostenfreie Lieferung ab 99 EUR"
+                     title="kostenfreie Lieferung ab 99 EUR"
+                     width="174"
+                     height="50"
+                />
             </a>
-            <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/CoBi_TopShopProfessional2023_Logo_Hor_Gastronomiebedarf.png'); ?>"
-                 alt="ComputerBild TopShop 2023 Gastronomiebedarf" title="ComputerBild TopShop 2023 Gastronomiebedarf" width="200"/>
-            <img class="footer-logo lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/gastrodax-logo.png'); ?>"
-                 alt="Gastrodax" title="Gastrodax" width="240" height="46"/>
+            <a href="<?php echo Mage::getUrl('', array('_direct' => 'topshop')); ?>">
+                <img class="lazy"
+                     src="<?php echo $this->getSkinUrl('dist/assets/img/CoBi_TopShopProfessional2023_Logo_Hor_Gastronomiebedarf.png'); ?>"
+                     alt="ComputerBild TopShop 2023 Gastronomiebedarf"
+                     title="ComputerBild TopShop 2023 Gastronomiebedarf"
+                     width="200"
+                />
+            </a>
+            <img class="footer-logo lazy"
+                 src="<?php echo $this->getSkinUrl('dist/assets/img/gastrodax-logo.png'); ?>"
+                 alt="Gastrodax"
+                 title="Gastrodax"
+                 width="240"
+                 height="46"
+            />
             <a href="https://www.newgastroline.de" target="_blank">
-                <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/30jahre.png') ?>"
-                     alt="30 Jahre New Gastroline GmbH" title="30 Jahre New Gastroline GmbH" width="80" height="34" />
+                <img class="lazy"
+                     src="<?php echo $this->getSkinUrl('dist/assets/img/30jahre.png') ?>"
+                     alt="30 Jahre New Gastroline GmbH"
+                     title="30 Jahre New Gastroline GmbH"
+                     width="80"
+                     height="34"
+                />
             </a>
-
         </div>
     </div>
     <div class="footer-info">
@@ -194,50 +214,42 @@
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#paypal')); ?>">
                         <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/paypal-white.png') ?>"
-                             alt="PayPal Logo" title="PayPal Logo" width="100" height="75"/>
-                    </a>
+                             alt="PayPal Logo" title="PayPal Logo" width="100" height="75"/> </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#klarna')); ?>">
                         <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/klarna-white.png') ?>"
-                             alt="Klarna Logo" title="Klarna Logo" width="100" height="75"/>
-                    </a>
+                             alt="Klarna Logo" title="Klarna Logo" width="100" height="75"/> </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#sofort')); ?>">
                         <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/sofort-white.png') ?>"
-                             alt="Sofortüberweisung Logo" title="Sofortüberweisung Logo" width="100" height="75"/>
-                    </a>
+                             alt="Sofortüberweisung Logo" title="Sofortüberweisung Logo" width="100" height="75"/> </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#moneyorder')); ?>">
                         <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/vorkasse-white.png') ?>"
-                             alt="Vorkasse Logo" title="Vorkasse Logo" width="100" height="75"/>
-                    </a>
+                             alt="Vorkasse Logo" title="Vorkasse Logo" width="100" height="75"/> </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#creditcard')); ?>">
                         <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/creditcard-white.png') ?>"
-                             alt="Kreditkarte Logo" title="Kreditkarte Logo" width="100" height="75"/>
-                    </a>
+                             alt="Kreditkarte Logo" title="Kreditkarte Logo" width="100" height="75"/> </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#invoice')); ?>">
                         <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/invoice-white.png') ?>"
-                             alt="Rechnung Logo" title="Rechnung Logo" width="100" height="75"/>
-                    </a>
+                             alt="Rechnung Logo" title="Rechnung Logo" width="100" height="75"/> </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#finanz')); ?>">
                         <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/finanz-white.png') ?>"
-                             alt="Finanzierung Logo" title="Finanzierung Logo" width="100" height="75"/>
-                    </a>
+                             alt="Finanzierung Logo" title="Finanzierung Logo" width="100" height="75"/> </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#sepa')); ?>">
                         <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/sepa-white.png') ?>"
-                             alt="Sepa Lastschrift Logo" title="Sepa Lastschrift Logo" width="100" height="75"/>
-                    </a>
+                             alt="Sepa Lastschrift Logo" title="Sepa Lastschrift Logo" width="100" height="75"/> </a>
                 </li>
             </ul>
         </div>
@@ -279,12 +291,15 @@
         </div>
         <div class="social">
             <ul>
-                <li><a href="https://facebook.com/gastrodax/" target="_blank" rel="nofollow noopener noreferrer" title="<?php echo $this->__('Facebook') ?>"><i
-                                class="fab fa-facebook-square"></i></a></li>
+                <li>
+                    <a href="https://facebook.com/gastrodax/" target="_blank" rel="nofollow noopener noreferrer" title="<?php echo $this->__('Facebook') ?>"><i
+                            class="fab fa-facebook-square"></i></a></li>
                 <li><a href="https://www.youtube.com/channel/UCTr6z7_W4adeggGR1Sa717g" target="_blank"
-                       rel="nofollow noopener noreferrer" title="<?php echo $this->__('YouTube') ?>"><i class="fab fa-youtube-square"></i></a></li>
-                <li><a href="https://twitter.com/gastrodax" target="_blank" rel="nofollow noopener noreferrer" title="<?php echo $this->__('Twitter') ?>"><i
-                                class="fab fa-twitter-square"></i></a></li>
+                       rel="nofollow noopener noreferrer" title="<?php echo $this->__('YouTube') ?>"><i class="fab fa-youtube-square"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/gastrodax" target="_blank" rel="nofollow noopener noreferrer" title="<?php echo $this->__('Twitter') ?>"><i
+                            class="fab fa-twitter-square"></i></a></li>
             </ul>
         </div>
         <div class="copyright">
@@ -328,7 +343,7 @@ if (!trustedshopscachecheck($cacheFileName, $cacheTimeOut)) {
     curl_setopt($ch, CURLOPT_CUSTOMREQUEST, 'GET');
     curl_setopt($ch, CURLOPT_URL, $apiUrl);
     $output = curl_exec($ch);
-    if($output) {
+    if ($output) {
         file_put_contents($cacheFileName, $output);
     }
     curl_close($ch);
