--- a/app/design/frontend/foundation/default/template/page/html/header.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/header.phtml
@@ -55,6 +55,13 @@
             </ul>
         </div>
         <div class="search">
+            <div class="nav show-for-small-only">
+                <button class="hamburger hamburger--arrow-d hamburger--accessible" type="button" data-toggle="offCanvas" aria-label="Main menu" role="navigation">
+              <span class="hamburger-box">
+                <span class="hamburger-inner"></span>
+              </span>
+                </button>
+            </div>
             <?php echo $this->getChildHtml('topSearch') ?>
         </div>
         <div class="hotline">
@@ -77,7 +84,7 @@
         </div>
     </div>
     <div class="header-bottom">
-        <div class="nav">
+        <div class="nav show-for-medium">
             <button class="hamburger hamburger--arrow-d hamburger--accessible" type="button" data-toggle="offCanvas" aria-label="Main menu" role="navigation">
               <span class="hamburger-box">
                 <span class="hamburger-inner"></span>
