--- a/skin/frontend/foundation/default/src/assets/scss/custom/_hamburgers.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_hamburgers.scss
@@ -14,7 +14,7 @@ $hamburger-padding-y           : 10px !default;
 $hamburger-layer-width         : 20px !default;
 $hamburger-layer-height        : 2px !default;
 $hamburger-layer-spacing       : 4px !default;
-$hamburger-layer-color         : $white !default;
+$hamburger-layer-color         : $primary-color !default;
 $hamburger-layer-border-radius : 0px !default;
 $hamburger-hover-opacity       : 1 !default;
 $hamburger-active-layer-color  : $hamburger-layer-color !default;
