--- a/skin/frontend/foundation/default/src/assets/scss/custom/_header.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_header.scss
@@ -162,7 +162,7 @@ header {
       font-size: 1rem;
       padding-left: 1rem;
       .hamburger {
-          background-color: $secondary-color;
+          background-color: $white;
           border-radius: 100%;
           line-height: 0;
           margin: 2px;
