--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -22,7 +22,8 @@
                      src="<?php echo $this->getSkinUrl('dist/assets/img/CoBi_TopShopProfessional2023_Logo_Hor_Gastronomiebedarf.png'); ?>"
                      alt="ComputerBild TopShop 2023 Gastronomiebedarf"
                      title="ComputerBild TopShop 2023 Gastronomiebedarf"
-                     width="200"
+                     width="192"
+                     height="64"
                 />
             </a>
             <img class="footer-logo lazy"
