--- a/skin/frontend/foundation/default/src/assets/scss/custom/_header.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_header.scss
@@ -6,7 +6,6 @@ header {
     .brand {
       margin: 0 auto;
       text-align: center;
-      justify-content: center;
       @media #{$small-only} {
         margin: .5em 0;
       }
@@ -42,46 +41,33 @@ header {
         @include breakpoint(large) {
           justify-content: flex-start;
         }
-
         .quality-since {
           @include show-for(xlarge);
           @include breakpoint(retina) {
             font-size: .9rem;
           }
-          font-size: 1.2rem;
+          font-size: 1rem;
           font-weight: 500;
-          letter-spacing: .02rem;
           display: block;
           text-transform: uppercase;
-
           span {
             font-weight: 500;
-            letter-spacing: .15rem;
-            @include breakpoint(retina) {
-              letter-spacing: .1rem;
-            }
             margin-top: -8px;
             font-size: 0.7rem;
             display: block;
           }
         }
-
         .ts-trusted {
           @include show-for(xlarge);
           @include breakpoint(retina) {
             font-size: .9rem;
           }
-          font-size: 1.2rem;
+          text-transform: uppercase;
+          font-size: 1rem;
           font-weight: 500;
-          letter-spacing: 1px;
           display: block;
-
           span {
             font-weight: 500;
-            letter-spacing: .23rem;
-            @include breakpoint(retina) {
-              letter-spacing: .1rem;
-            }
             margin-top: -8px;
             font-size: 0.7rem;
             display: block;
@@ -97,6 +83,185 @@ header {
         }
       }
     }
+
+      .store_switch {
+          @extend .align-center;
+
+          .toggleSwitch span span {
+              display: none;
+          }
+
+          .toggleSwitch {
+              @media #{$small-only} {
+                  margin: 0 0 .5em 0;
+              }
+              border: 1px solid #cacaca;
+              font-size: 0.7rem;
+              position: relative;
+              overflow: visible;
+              padding: 0;
+              cursor: pointer;
+              width: 200px;
+              background-color: $white;
+              border-radius: 5px;
+              height: 34px;
+              user-select: none;
+          }
+          .toggleSwitch * {
+              -webkit-box-sizing: border-box;
+              -moz-box-sizing: border-box;
+              box-sizing: border-box;
+          }
+          .toggleSwitch label,
+          .toggleSwitch > span {
+              line-height: 20px;
+              height: 20px;
+              vertical-align: middle;
+          }
+          .toggleSwitch input:focus ~ a,
+          .toggleSwitch input:focus + label {
+              outline: none;
+          }
+          .toggleSwitch label {
+              position: relative;
+              z-index: 3;
+              display: block;
+              width: 100%;
+          }
+          .toggleSwitch input {
+              position: absolute;
+              opacity: 0;
+              z-index: 5;
+          }
+          .toggleSwitch > span {
+              position: absolute;
+              left: 0;
+              width: calc(100% - 6px);
+              margin: 0;
+              text-align: left;
+              white-space: nowrap;
+              margin:0 3px;
+          }
+          .toggleSwitch > span span {
+              position: absolute;
+              top: 0;
+              left: 0;
+              z-index: 5;
+              display: block;
+              width: 50%;
+              margin-left: 50px;
+              text-align: left;
+              font-size: 0.9em;
+              width: auto;
+              left: 0;
+              top: -1px;
+              opacity: 1;
+              width:40%;
+              text-align: center;
+              line-height: 34px;
+          }
+          .toggleSwitch a {
+              position: absolute;
+              right: 50%;
+              z-index: 4;
+              display: block;
+              top: 3px;
+              bottom: 3px;
+              padding: 0;
+              left: 3px;
+              width: 50%;
+              background-color: $primary-color;
+              border-radius: 4px;
+              -webkit-transition: all 0.2s ease-out;
+              -moz-transition: all 0.2s ease-out;
+              transition: all 0.2s ease-out;
+              box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+          }
+          .toggleSwitch > span span:first-of-type {
+              color: $white;
+              opacity: 1;
+              left: 0;
+              margin: 0;
+              width: 50%;
+          }
+          .toggleSwitch > span span:last-of-type {
+              left:auto;
+              right:0;
+              color: $primary-color;
+              margin: 0;
+              width: 50%;
+          }
+          .toggleSwitch > span:before {
+              content: '';
+              display: block;
+              width: 100%;
+              height: 100%;
+              position: absolute;
+              left: 0;
+              top: -2px;
+              border-radius: 30px;
+              -webkit-transition: all 0.2s ease-out;
+              -moz-transition: all 0.2s ease-out;
+              transition: all 0.2s ease-out;
+          }
+          .toggleSwitch input:checked ~ a {
+              left: calc(50% - 3px);
+          }
+          .toggleSwitch input:checked ~ span span:first-of-type {
+              left:0;
+              color: $primary-color;
+          }
+          .toggleSwitch input:checked ~ span span:last-of-type {
+              color: $white;
+          }
+          .toggleSwitch input ~ span span:first-of-type {
+              left:0;
+              color: $white;
+          }
+          .toggleSwitch input ~ span span:last-of-type {
+              color: $primary-color;
+          }
+          .toggleSwitch.large {
+              width: 60px;
+              height: 27px;
+          }
+          .toggleSwitch.large a {
+              width: 27px;
+          }
+          .toggleSwitch.large > span {
+              height: 29px;
+              line-height: 28px;
+          }
+          .toggleSwitch.large input:checked ~ a {
+              left: 41px;
+          }
+          .toggleSwitch.large > span span {
+              font-size: 1.1em;
+          }
+          .toggleSwitch.large > span span:first-of-type {
+              left: 50%;
+          }
+          .toggleSwitch.xlarge {
+              width: 80px;
+              height: 36px;
+          }
+          .toggleSwitch.xlarge a {
+              width: 36px;
+          }
+          .toggleSwitch.xlarge > span {
+              height: 38px;
+              line-height: 37px;
+          }
+          .toggleSwitch.xlarge input:checked ~ a {
+              left: 52px;
+          }
+          .toggleSwitch.xlarge > span span {
+              font-size: 1.4em;
+          }
+          .toggleSwitch.xlarge > span span:first-of-type {
+              left: 50%;
+          }
+      }
 
     .search {
       #search_mini_form {
@@ -133,7 +298,7 @@ header {
 
       a {
         color: $white;
-        font-size: rem-calc(30);
+        font-size: rem-calc(25);
         font-weight: 600;
 
         i {
@@ -142,10 +307,10 @@ header {
 
         span {
           font-weight: 500;
-          letter-spacing: .20rem;
           margin-top: -10px;
           font-size: 0.7rem;
           display: block;
+          text-transform: uppercase;
         }
       }
     }
@@ -190,8 +355,8 @@ header {
       }
     }
     .account {
-      font-size: .8rem;
 
+      font-size: .8rem;
       a {
         color: $white;
         display: inline-block;
@@ -221,9 +386,6 @@ header {
         .title {
           @include breakpoint(small only) {
             font-size: 0;
-          }
-          @include breakpoint(medium) {
-            font-size: 1rem;
           }
         }
       }
